# Drone-Launcher

./: .gitignore  README.md
electronics/: Adafruit_MCP23017.kicad_sym  README.md  drone_launcher-eagle-import.kicad_sym  drone_launcher.kicad_pcb  drone_launcher.kicad_prl  drone_launcher.kicad_pro  drone_launcher.kicad_sch  drone_launcher.xml  fp-info-cache  fp-lib-table  sym-lib-table
electronics/Adafruit_MCP23017_Breakout.pretty/: Adafruit_MCP23017_Breakout.kicad_mod
electronics/Connector_XT60.pretty/: AMASS_XT60-M.kicad_mod
electronics/manufacturing/: drone_launcher-B_Cu.gbr  drone_launcher-B_Mask.gbr  drone_launcher-B_Paste.gbr  drone_launcher-B_Silkscreen.gbr  drone_launcher-Edge_Cuts.gbr  drone_launcher-F_Cu.gbr  drone_launcher-F_Mask.gbr  drone_launcher-F_Paste.gbr  drone_launcher-F_Silkscreen.gbr  drone_launcher.drl
electronics/teensy.pretty/: Teensy41.kicad_mod  Teensy41_All_Pins.kicad_mod
electronics/teensy_library/: teensy.kicad_sym
embedded_sw/: README.md  platformio.ini
embedded_sw/drone_launcher_msgs_pkg/: CMakeLists.txt  package.xml
embedded_sw/drone_launcher_pkg/: CMakeLists.txt  package.xml
embedded_sw/drone_launcher_pkg/launch/: drone_launcher.launch
embedded_sw/drone_launcher_pkg/msg/: LaunchUnitStatus.msg  LauncherStatus.msg  ManualControl.msg
images/: power_diagram.cddx
include/: LaunchUnit.h
scripts/: compile_and_flash.sh  connect_odroid_ros_master.bash  connect_to_teensy.sh  copy_files_and_compile_odroid.sh  download_updates.sh  drone_launcher.service  install.sh  odroid_startup.sh
src/: LaunchUnit.cpp  main.cpp
(+28 files in other folders)
